Corrección botón de eliminar en la primera fila

--- a/Act1/index.html
+++ b/Act1/index.html
@@ -69,7 +69,7 @@
                             <input type="number" name="vmateria[]" class="form-control vmateria text-end" placeholder="Valor Materia" onchange="suma();">
                         </div>
                     </td>
-                    <td><button class="btn btn-success" id="btn-add"  name="btn-add">+</button> <button class="btn btn-danger btn_remove" id="btn-delete" name="btn-delete">x</button> </td>
+                    <td><button class="btn btn-success" id="btn-add"  name="btn-add">+</button>  </td>
                 </tr>
                 
            
